# NixCppStarterTemplate

./: .clangd  .envrc  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix
src/: main.cpp
